# spaz

./: Cargo.toml  LICENSE  README.md  local-network.sh
.github/workflows/: release.yml
src/: lib.rs  main.rs
