[package]
name = "spaz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "spaz"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
cln-plugin = "0.1.0"
cln-rpc = {version = "0.1.0"}
serde_json = "1.0"
log = "0.4.17"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0.57"
tonic = { version = "^0.5", features = ["tls", "transport"] }
serde = { version = "1.0.131", features = ["derive"] }
rand = "0.7"